Fix: Margin between buttons and guide-link was too long

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -26,5 +26,5 @@
 
 /* Guide link */
 #guide-links {
-  margin-top: 10em;
+  margin-top: 5em;
 }
